// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherComponent debe hacer match con el snapshot 1`] = `
<div
  id="root1"
>
  <h1>
    father
  </h1>
  <button
    class="btn btn-primary"
  >
     Cargar cliente

  </button>
  <br />
  <br />
  <code
    class="mt-2"
  >
     

  </code>
  <hr />
  <app-father-son>
    <h5>
      son
    </h5>
    <code>
       
    </code>
    <br />
    <br />
    
    
  </app-father-son>
</div>
`;

exports[`FatherComponent debe mostrar el nombre del cliente 1`] = `
<div
  id="root2"
>
  <h1>
    father
  </h1>
  <button
    class="btn btn-primary"
  >
     Cargar cliente

  </button>
  <br />
  <br />
  <code
    class="mt-2"
  >
     {
  "name": "Dantee",
  "id": 1
}

  </code>
  <hr />
  <app-father-son>
    <h5>
      son
    </h5>
    <code>
      {
  "name": "Dantee",
  "id": 1
} 
    </code>
    <br />
    <br />
    <button
      class="btn btn-outline-primary mx-2"
      data-test="btnUpdate"
    >
      Cambiar ID
    </button>
    
    <button
      class="btn btn-outline-danger"
      data-test="btnDelete"
    >
      Borrar cliente
    </button>
    
  </app-father-son>
</div>
`;
